# geometric-moderation

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: release.yml
notebooks/: 01_ablation_study.ipynb  01_ablation_study_results_01.ipynb  02_ablation_study.ipynb  02_ablation_study_results_01.ipynb  02_ablation_study_results_02.ipynb  02_ablation_study_results_03.ipynb  02_ablation_study_results_04.ipynb  02_ablation_study_results_05.ipynb  02_ablation_study_results_06.ipynb  02_ablation_study_results_08.ipynb
src/geomod/: __init__.py
src/geomod/data/: __init__.py  datasets.py  tokenization.py
src/geomod/fairness/: __init__.py  mahalanobis.py
src/geomod/manifold/: __init__.py  poincare.py  spd.py
src/geomod/models/: __init__.py  attention.py  classifier.py  flat_baseline.py  hybrid.py
src/geomod/policy/: __init__.py  taxonomy.py
src/geomod/robustness/: __init__.py  mri.py
src/geomod/training/: __init__.py  config.py  metrics.py  trainer.py
tests/: test_fairness.py  test_poincare.py  test_taxonomy.py  test_training.py
